--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,17 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.3
-  equatable: ^2.0.0
-  flutter_bloc: ^7.0.0
+  equatable: ^2.0.3
+  flutter_bloc: ^7.0.1
   flutter_spinkit: ^5.0.0
   get: ^4.1.4
   google_fonts: ^2.1.0
   intl: ^0.17.0
   material_design_icons_flutter: ^4.0.5955
   supercharged: ^2.0.0
+  http: ^0.13.3
+  image_picker: ^0.8.0+3
+  url_launcher: ^6.0.6
 
 dev_dependencies:
   flutter_test:
